BusOne/src/objects/Veeva_Analytics_Process_vod__c.object
<CustomObject>
    <description>This object keeps track of objects that are synced to Veeva for VInsights.</description>
    <fields>
        <fullName>Last_Successful_Sync_vod__c</fullName>
        <description>This keeps track of the last time this object was successfully synced.</description>
        <label>Last Successful Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Row_Count_vod__c</fullName>
        <description>This field keeps track of how many rows were synced during the last successful sync.</description>
        <label>Last Sync Row Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Name_vod__c</fullName>
        <description>The name of the object that is synced to Veeva.</description>
        <externalId>true</externalId>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_In_Progress_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not a sync is currently in progress.</description>
        <label>Sync In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veeva_Row_Count_vod__c</fullName>
        <description>The total number of rows that Veeva has for a particular object.</description>
        <label>Veeva Row Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Veeva Analytics Process</label>
    <nameField>
        <label>Veeva Analytics Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veeva Analytics Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>